fix blog wrap

--- a/_sass/my-style.scss
+++ b/_sass/my-style.scss
@@ -25,10 +25,6 @@
   min-width: 250px;
 }
 
-.blogcolumn div:first-child {
-	margin-left: 0;
-}
-
 .blogcolumn h3 {
   margin-top: 10px;
   text-align: center;
@@ -36,8 +32,6 @@
 
 figure {
   min-width: 250px;
-	width: 45%;
-	height: auto;
 	margin: 0;
 	padding: 0;
 	background: #fff;
